@@ -1342,15 +1342,19 @@ encyclopedias etc. (as well as the LaTeX <cite>description</cite> environment).<
 <h4><a class="toc-backref" href="#toc-entry-47" role="doc-backlink"><span class="sectnum">3.2.2 </span>Details disclosure elements</a></h4>
 <p>Items of <a class="reference internal" href="#definition-lists">definition lists</a> with class argument &quot;details&quot; are converted
 to <a class="reference external" href="https://www.w3.org/TR/html52/interactive-elements.html#the-details-element">details</a> <a class="footnote-reference brackets" href="#footnote-9" id="footnote-reference-22" role="doc-noteref"><span class="fn-bracket">[</span>9<span class="fn-bracket">]</span></a> disclosure elements with the term becoming the &quot;summary&quot;.</p>
+<div class="details" id="closed-details">
 <details>
 <summary>A summary</summary>
 <p>with details only visible after user interaction.</p>
 </details>
+</div>
+<div class="details open" id="open-details">
 <details open="open">
 <summary>Another summary</summary>
 <p>with open details because the source list has the additional class
 value &quot;open&quot;.</p>
 </details>
+</div>
 </section>
 <section id="field-list-variants">
 <h4><a class="toc-backref" href="#toc-entry-48" role="doc-backlink"><span class="sectnum">3.2.3 </span>Field List Variants</a></h4>
