@@ -65,6 +65,9 @@ Changes Since 0.19
     Changes to the HTML output (no space character before closing tag of
     XML declaration, order of metadata elements)
     don't affect the HTML semantics, styling, and rendering.
+    
+  - Wrap definition lists with "details" class argument in a <div>    
+    with the "id" and "class" values of the list node.
 
 * docutils/writers/latex2e/__init__.py
 
